# yolov3-tiny-openvino

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  build.sh  build_benchmark.sh  build_debug.sh  build_release.sh  inference.cpp
src/: constants.hpp  inference.cpp  person_detector.cpp  person_detector.hpp  utils.cpp  utils.hpp
